--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,9 @@
 .App-link {
   color: #09d3ac;
 }
+
+.header-color {
+  background: #833ab4;
+  background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);                                                                                                                                                                                                                                                                                                         
+}
